@@ -11,7 +11,7 @@ Homepage: http://caml.inria.fr/
 
 Package: ocaml-nox
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, libncurses5-dev, ocaml-base-nox (=${binary:Version}), ocaml-base-nox-${F:OCamlABI}, ocaml-interp-${F:OCamlABI}, gcc, binutils
+Depends: ${shlibs:Depends}, ${misc:Depends}, libncurses5-dev, ocaml-base-nox (=${binary:Version}), ocaml-interp (=${binary:Version}), gcc, binutils
 Suggests: ocaml-doc, libgdbm-dev, tuareg-mode | ocaml-mode
 Recommends: camlp4, ledit, file
 Provides: ocaml-nox-${F:OCamlABI}, ${F:BestProvides}, libnums-ocaml-dev
@@ -42,7 +42,7 @@ Description: ML language implementation with a class-based object system
 
 Package: camlp4
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, ocaml-nox-${F:OCamlABI}
+Depends: ${shlibs:Depends}, ${misc:Depends}, ocaml-nox (=${binary:Version})
 Provides: camlp4-${F:OCamlABI}
 Description: Pre Processor Pretty Printer for OCaml
  Objective Caml (OCaml) is an implementation of the ML language,
@@ -61,7 +61,7 @@ Description: Pre Processor Pretty Printer for OCaml
 
 Package: camlp4-extra
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, camlp4-${F:OCamlABI}
+Depends: ${shlibs:Depends}, ${misc:Depends}, camlp4 (=${binary:Version})
 Description: Pre Processor Pretty Printer for OCaml - extras
  Objective Caml (OCaml) is an implementation of the ML language,
  based on the Caml Light dialect extended with a complete
@@ -79,7 +79,7 @@ Description: Pre Processor Pretty Printer for OCaml - extras
 
 Package: ocaml
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, ocaml-base (= ${binary:Version}), ocaml-base-${F:OCamlABI}, ocaml-nox-${F:OCamlABI}, libx11-dev
+Depends: ${shlibs:Depends}, ${misc:Depends}, ocaml-base (= ${binary:Version}), ocaml-nox (=${binary:Version}), libx11-dev
 Suggests: tcl8.4-dev, tk8.4-dev
 Provides: ocaml-${F:OCamlABI}
 Replaces: ocaml-nox (<< 3.10.0-12)
@@ -123,7 +123,7 @@ Description: Runtime system for OCaml bytecode executables
 
 Package: ocaml-base
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, ocaml-base-nox-${F:OCamlABI}
+Depends: ${shlibs:Depends}, ${misc:Depends}, ocaml-base-nox (=${binary:Version})
 Provides: ocaml-base-${F:OCamlABI}
 Description: Runtime system for OCaml bytecode executables
  Objective Caml (OCaml) is an implementation of the ML language, based on
@@ -137,7 +137,7 @@ Description: Runtime system for OCaml bytecode executables
 
 Package: ocaml-native-compilers
 Architecture: amd64 hurd-i386 i386 kfreebsd-i386 powerpc sparc
-Depends: ocaml-nox (= ${binary:Version}), ocaml-nox-${F:OCamlABI}, gcc, binutils, ${shlibs:Depends}, ${misc:Depends}
+Depends: ocaml-nox (= ${binary:Version}), gcc, binutils, ${shlibs:Depends}, ${misc:Depends}
 Provides: ocaml-best-compilers
 Replaces: ocaml-nox (<= 3.09.2-3)
 Description: Native code compilers of the OCaml suite (the .opt ones)
@@ -166,7 +166,7 @@ Description: Sources for Objective Caml
 Package: ocaml-interp
 Architecture: any
 Provides: ocaml-interp-${F:OCamlABI}
-Depends: ocaml-base-nox-${F:OCamlABI}, ${shlibs:Depends}, ${misc:Depends}
+Depends: ocaml-base-nox (=${binary:Version}), ${shlibs:Depends}, ${misc:Depends}
 Recommends: ledit
 Replaces: ocaml (<< 3.07.2a-3)
 Conflicts: ocaml (<< 3.07.2a-3)
@@ -181,7 +181,7 @@ Description: OCaml interactive interpreter and standard libraries
 Package: ocaml-compiler-libs
 Architecture: any
 Provides: ocaml-compiler-libs-${F:OCamlABI}
-Depends: ocaml-nox-${F:OCamlABI}, ${shlibs:Depends}, ${misc:Depends}
+Depends: ocaml-nox (=${binary:Version}), ${shlibs:Depends}, ${misc:Depends}
 Description: OCaml interpreter and standard libraries
  Objective (OCaml) is an implementation of the ML language, based on
  the Caml Light dialect extended with a complete class-based object system
