@@ -1,8 +1,13 @@
 ocaml (3.10.2-2) UNRELEASED; urgency=low
 
+  [ Stefano Zacchiroli ]
   * fix "OCaml" spelling errors in package descriptions (thanks lintian!)
 
- -- Stefano Zacchiroli <zack@debian.org>  Mon, 03 Mar 2008 11:52:03 +0100
+  [ Romain Beauxis ]
+  * removed virtual package from internal dependencies in favour of strict
+    versioned dependencies. Prevents build failures under some situations.
+
+ -- Romain Beauxis <toots@rastageeks.org>  Sun, 13 Apr 2008 16:53:04 +0100
 
 ocaml (3.10.2-1) experimental; urgency=low
 
